# zpr_proj

./: .gitignore  README.md  Ultimate cpp.sln
Ultimate TicTacToe/: AiPlayer.h  Board.cpp  Board.h  Controler.cpp  Controler.h  Game.cpp  Game.h  Ultimate TicTacToe.cpp  Ultimate TicTacToe.vcxproj  resource.h
Ultimate cpp/: Ultimate cpp.cpp  Ultimate cpp.vcxproj  Ultimate cpp.vcxproj.filters
backend/: CMakeLists.txt  TicTacToe.cpp  tutorial.md
backend/AiPlayer/src/: AiPlayer.h
backend/Board/src/: Board.cpp  Board.h
backend/Controler/src/: Controler.h
backend/proto/: CMakeLists.txt
backend/server/src/: main.cpp
backend/src/: CMakeLists.txt  config-file
backend/src/AiPlayer/: AiPlayer.cpp  AiPlayer.h  CMakeLists.txt
backend/src/Board/: Board.cpp  Board.h  CMakeLists.txt
backend/src/Controler/: CMakeLists.txt  Controler.cpp  Controler.h
backend/src/Game/: CMakeLists.txt  Game.cpp  Game.h
backend/src/HumanPlayer/: CMakeLists.txt  HumanPlayer.h
backend/src/Player/: CMakeLists.txt  Player.h
backend/src/proto/myproto/: game.proto
backend/src/server/: CMakeLists.txt  main.cpp
backend/tests/: CMakeLists.txt  GameTest.cpp
web_interface/: Doxyfile  GRPCserver.py  db.sqlite3  tutorial.md
web_interface/main_menu/: GRPCclient.py  game_pb2.py  game_pb2_grpc.py  tests.py  urls.py  views.py
web_interface/main_menu/protos/: game.proto
web_interface/main_menu/static/css/: board.css  board_size.css  game_options.css
web_interface/main_menu/templates/: board.html  board_size.html  game_options.html
web_interface/web_interface/: settings.py  urls.py
(+1 files in other folders)
